--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "better-scroll": "^2.5.1",
     "core-js": "^3.8.3",
     "swiper": "^5.4.5",
     "vue": "^2.6.14",
